welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: Missing closing brace `}' assumed here
var stop=false//permet arret de la danse
^